# accel-window

./: .gitmodules  CMakeLists.txt  LICENSE.txt  README.md
cmake/: FindModule.cmake
include/accel/: window  window.hpp
include/accel/impls/: wayland_window.inl  win32_window.inl  x11_window.inl
protocols/: .gitignore  CMakeLists.txt
src/: window.cpp
src/details/: LooplessSizeMove.cpp
tests/: CMakeLists.txt  window_test.cpp
